--- a/style/style.css
+++ b/style/style.css
@@ -5,3 +5,16 @@
     background-color: teal;
     margin-right: 2px;
 }
+
+.axis path,
+.axis line {
+    fill: none;
+    stroke: green;
+    shape-rendering: crispEdges;
+}
+
+.axis text {
+    font-family: sans-serif;
+    font-size: 11px;
+    fill: olive;
+}
